export const snapshot = {};

snapshot[`Typegraph using temporal 1`] = `
'[
  {
    "\$id": "https://metatype.dev/specs/0.0.3.json",
    "types": [
      {
        "type": "object",
        "title": "temporal",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "start": 1,
          "query": 8,
          "signal": 14,
          "describe": 20
        },
        "required": [
          "start",
          "query",
          "signal",
          "describe"
        ]
      },
      {
        "type": "function",
        "title": "func_6",
        "runtime": 1,
        "policies": [
          0
        ],
        "config": {},
        "as_id": false,
        "input": 2,
        "output": 7,
        "materializer": 0,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "object_4",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "workflow_id": 3,
          "args": 4
        },
        "required": []
      },
      {
        "type": "string",
        "title": "string_2",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "list",
        "title": "array_3",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "items": 5
      },
      {
        "type": "object",
        "title": "object_1",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "some_field": 6
        },
        "required": []
      },
      {
        "type": "string",
        "title": "string_0",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "string",
        "title": "string_5",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "function",
        "title": "func_12",
        "runtime": 1,
        "policies": [
          0
        ],
        "config": {},
        "as_id": false,
        "input": 9,
        "output": 13,
        "materializer": 2,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "object_10",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "workflow_id": 10,
          "run_id": 11,
          "args": 12
        },
        "required": []
      },
      {
        "type": "string",
        "title": "string_7",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "string",
        "title": "string_8",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "list",
        "title": "array_9",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "items": 5
      },
      {
        "type": "string",
        "title": "string_11",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "function",
        "title": "func_21",
        "runtime": 1,
        "policies": [
          0
        ],
        "config": {},
        "as_id": false,
        "input": 15,
        "output": 19,
        "materializer": 3,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "object_20",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "workflow_id": 16,
          "run_id": 17,
          "args": 18
        },
        "required": []
      },
      {
        "type": "string",
        "title": "string_13",
        "runtime": 1,
        "policies": [],
        "injection": {
          "source": "static",
          "data": {
            "value": "\\\\"1234\\\\""
          }
        },
        "config": {},
        "as_id": false
      },
      {
        "type": "string",
        "title": "string_14",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "list",
        "title": "array_15",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "items": 5
      },
      {
        "type": "string",
        "title": "string_17",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "function",
        "title": "func_26",
        "runtime": 1,
        "policies": [
          0
        ],
        "config": {},
        "as_id": false,
        "input": 21,
        "output": 24,
        "materializer": 4,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "object_24",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "workflow_id": 22,
          "run_id": 23
        },
        "required": []
      },
      {
        "type": "string",
        "title": "string_22",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "string",
        "title": "string_23",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "string",
        "title": "string_25",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false
      }
    ],
    "materializers": [
      {
        "name": "start_workflow",
        "runtime": 1,
        "effect": {
          "effect": "create",
          "idempotent": false
        },
        "data": {
          "workflow_type": "<workflow_type>"
        }
      },
      {
        "name": "predefined_function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "name": "true"
        }
      },
      {
        "name": "query_workflow",
        "runtime": 1,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "query_type": "<query_type>"
        }
      },
      {
        "name": "signal_workflow",
        "runtime": 1,
        "effect": {
          "effect": "update",
          "idempotent": false
        },
        "data": {
          "signal_name": "<signal_name>"
        }
      },
      {
        "name": "describe_workflow",
        "runtime": 1,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {}
      }
    ],
    "runtimes": [
      {
        "name": "deno",
        "data": {
          "worker": "default",
          "permissions": {}
        }
      },
      {
        "name": "temporal",
        "data": {
          "name": "<name>",
          "host": "<host>"
        }
      }
    ],
    "policies": [
      {
        "name": "__public",
        "materializer": 1
      }
    ],
    "meta": {
      "prefix": null,
      "secrets": [],
      "queries": {
        "dynamic": true,
        "endpoints": []
      },
      "cors": {
        "allow_origin": [],
        "allow_headers": [],
        "expose_headers": [],
        "allow_methods": [],
        "allow_credentials": true,
        "max_age_sec": null
      },
      "auths": [],
      "rate": null,
      "version": "0.0.3"
    }
  }
]'
`;

snapshot[`Typegraph using temporal 2`] = `
'[
  {
    "\$id": "https://metatype.dev/specs/0.0.3.json",
    "types": [
      {
        "type": "object",
        "title": "temporal",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "start": 1,
          "query": 8,
          "signal": 14,
          "describe": 20
        },
        "required": [
          "start",
          "query",
          "signal",
          "describe"
        ]
      },
      {
        "type": "function",
        "title": "func_6",
        "runtime": 1,
        "policies": [
          0
        ],
        "config": {},
        "as_id": false,
        "input": 2,
        "output": 7,
        "materializer": 0,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "object_4",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "workflow_id": 3,
          "args": 4
        },
        "required": []
      },
      {
        "type": "string",
        "title": "string_2",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "list",
        "title": "array_3",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "items": 5
      },
      {
        "type": "object",
        "title": "object_1",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "some_field": 6
        },
        "required": []
      },
      {
        "type": "string",
        "title": "string_0",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "string",
        "title": "string_5",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "function",
        "title": "func_13",
        "runtime": 1,
        "policies": [
          0
        ],
        "config": {},
        "as_id": false,
        "input": 9,
        "output": 13,
        "materializer": 2,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "object_11",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "workflow_id": 10,
          "run_id": 11,
          "args": 12
        },
        "required": []
      },
      {
        "type": "string",
        "title": "string_8",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "string",
        "title": "string_9",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "list",
        "title": "array_10",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "items": 5
      },
      {
        "type": "string",
        "title": "string_12",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "function",
        "title": "func_23",
        "runtime": 1,
        "policies": [
          0
        ],
        "config": {},
        "as_id": false,
        "input": 15,
        "output": 19,
        "materializer": 3,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "object_22",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "workflow_id": 16,
          "run_id": 17,
          "args": 18
        },
        "required": []
      },
      {
        "type": "string",
        "title": "string_15",
        "runtime": 1,
        "policies": [],
        "injection": {
          "source": "static",
          "data": {
            "value": "\\\\"1234\\\\""
          }
        },
        "config": {},
        "as_id": false
      },
      {
        "type": "string",
        "title": "string_16",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "list",
        "title": "array_17",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "items": 5
      },
      {
        "type": "string",
        "title": "string_19",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "function",
        "title": "func_29",
        "runtime": 1,
        "policies": [
          0
        ],
        "config": {},
        "as_id": false,
        "input": 21,
        "output": 24,
        "materializer": 4,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "object_27",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "workflow_id": 22,
          "run_id": 23
        },
        "required": []
      },
      {
        "type": "string",
        "title": "string_25",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "string",
        "title": "string_26",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "string",
        "title": "string_28",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false
      }
    ],
    "materializers": [
      {
        "name": "start_workflow",
        "runtime": 1,
        "effect": {
          "effect": "create",
          "idempotent": false
        },
        "data": {
          "workflow_type": "<workflow_type>"
        }
      },
      {
        "name": "predefined_function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "name": "true"
        }
      },
      {
        "name": "query_workflow",
        "runtime": 1,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "query_type": "<query_type>"
        }
      },
      {
        "name": "signal_workflow",
        "runtime": 1,
        "effect": {
          "effect": "update",
          "idempotent": false
        },
        "data": {
          "signal_name": "<signal_name>"
        }
      },
      {
        "name": "describe_workflow",
        "runtime": 1,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {}
      }
    ],
    "runtimes": [
      {
        "name": "deno",
        "data": {
          "worker": "default",
          "permissions": {}
        }
      },
      {
        "name": "temporal",
        "data": {
          "name": "<name>",
          "host": "<host>"
        }
      }
    ],
    "policies": [
      {
        "name": "__public",
        "materializer": 1
      }
    ],
    "meta": {
      "prefix": null,
      "secrets": [],
      "queries": {
        "dynamic": true,
        "endpoints": []
      },
      "cors": {
        "allow_origin": [],
        "allow_headers": [],
        "expose_headers": [],
        "allow_methods": [],
        "allow_credentials": true,
        "max_age_sec": null
      },
      "auths": [],
      "rate": null,
      "version": "0.0.3"
    }
  }
]'
`;
